--- a/src/style/landing.css
+++ b/src/style/landing.css
@@ -1,25 +1,30 @@
+body {
+  background-color: white;
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  height: 100%;
+}
+
 #root {
   max-width: 1280px;
+  height: 75%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
 .logo {
-  height: 6em;
+  height: 12em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #000);
 }
 
-@keyframes logo-spin {
-  from {
+@keyframes pin {
+  from {logo-s
     transform: rotate(0deg);
   }
   to {
@@ -27,16 +32,25 @@
   }
 }
 
+.title-landing {
+  font-family: 'Days One', sans-serif;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 5px #2a2a2a;
+}
+
+.p1 {
+  font-size: 50px;
+}
+
+.p2 {
+  font-size: 78px;
+  position: relative;
+  top: -65px;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
