--- a/src/style/landing.css
+++ b/src/style/landing.css
@@ -33,9 +33,10 @@ body {
 } */
 
 .title-landing {
-  font-family: 'Days One', sans-serif;
+  font-family: 'DotGothic16', sans-serif;
   text-transform: uppercase;
   text-shadow: 2px 2px 5px #2a2a2a;
+  letter-spacing: 5px;
 }
 
 .p1 {
@@ -45,7 +46,8 @@ body {
 .p2 {
   font-size: 78px;
   position: relative;
-  /* top: -65px; */
+  top: -20px; 
+  font-size: bolder;
 }
 
 
