--- a/src/style/landing.css
+++ b/src/style/landing.css
@@ -33,7 +33,7 @@ body {
 } */
 
 .title-landing {
-  font-family: 'DotGothic16', sans-serif;
+  font-family: 'Unbounded', sans-serif;;
   text-transform: uppercase;
   text-shadow: 2px 2px 5px #2a2a2a;
   letter-spacing: 5px;
@@ -49,7 +49,6 @@ body {
   top: -20px; 
   font-size: bolder;
 }
-
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
